[package]
name = "iron-react-webpack"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "MIT"

[dependencies]
iron = "0.3.0"
log = "0.3.6"
env_logger = "0.3.3"
router = "0.1.1"
logger = "0.0.3"
rustc-serialize = "0.3"
quick-error = "1.0.0"
mount = "*"
bodyparser = "*"
rand = "0.3"
cookie = "0.2.2"
oven = "0.3.0"
persistent = "0.1.0"
plugin = "*"
